--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </header>
     <!-- main -->
     <div class="main">
+      <!-- hero -->
       <div class="hero">
         <div class="main-content">
           <div class="body-hero">
@@ -115,6 +116,55 @@
                 <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+      <!-- popular -->
+      <div class="popular">
+        <div class="main-content"></div>
+        <div class="popular-top">
+          <!-- popular left -->
+          <div class="info">
+            <h2 class="heading-h2">Our popular courses</h2>
+            <p class="desc">
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+          </div>
+          <!-- popular right -->
+          <div class="controls">
+            <button class="controls-btn">
+              <svg
+                width="8"
+                height="14"
+                viewBox="0 0 8 14"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7 1L1 7L7 13"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+            <button class="controls-btn">
+              <svg
+                width="8"
+                height="14"
+                viewBox="0 0 8 14"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M1 1L7 7L1 13"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
