--- a/index.html
+++ b/index.html
@@ -121,50 +121,118 @@
       </div>
       <!-- popular -->
       <div class="popular">
-        <div class="main-content"></div>
-        <div class="popular-top">
-          <!-- popular left -->
-          <div class="info">
-            <h2 class="heading-h2">Our popular courses</h2>
-            <p class="desc">
-              Build new skills with new trendy courses and shine for the next
-              future career.
-            </p>
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- popular left -->
+            <div class="info">
+              <h2 class="heading-h2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!-- popular right -->
+            <div class="controls">
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
-          <!-- popular right -->
-          <div class="controls">
-            <button class="controls-btn">
-              <svg
-                width="8"
-                height="14"
-                viewBox="0 0 8 14"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M7 1L1 7L7 13"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </button>
-            <button class="controls-btn">
-              <svg
-                width="8"
-                height="14"
-                viewBox="0 0 8 14"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1 1L7 7L1 13"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </button>
+          <div class="course-list">
+            <!-- item 1 -->
+            <div class="course-item">
+             <a href=""> <img src="assets/img/Image.svg" alt="" class="thumb" /></a>
+              <div class="info">
+                <div class="head">
+                 <a href=""><h3 class="title">Basic web design</h3></a>
+                  <div class="rating">
+                    <img src="assets/icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <h3 class="price">$120.75</h3>
+                  <button class="btn btn-book-now">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="course-item">
+             <a href=""><img src="assets/img/Image (1).svg" alt="" class="thumb" /></a>
+              <div class="info">
+                <div class="head">
+               <a href=""><h3 class="title">UI/UX design</h3></a>
+                  <div class="rating">
+                    <img src="assets/icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <h3 class="price">$120.75</h3>
+                  <button class="btn btn-book-now">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="course-item">
+              <a href="">
+                <img src="assets/img/Image (2).svg" alt="" class="thumb" />
+                <div class="info">
+              </a>
+                <div class="head">
+                  <a href=""><h3 class="title">Web App design</h3></a>
+                  <div class="rating">
+                    <img src="assets/icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <h3 class="price">$120.75</h3>
+                  <button class="btn btn-book-now">Book Now</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
