phần popular tiếp

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
              <a href=""> <img src="assets/img/Image.svg" alt="" class="thumb" /></a>
               <div class="info">
                 <div class="head">
-                 <a href=""><h3 class="title">Basic web design</h3></a>
+                 <h3 class="title"><a href="" class="line-clamp"></a>Basic web design</a></h3>
                   <div class="rating">
                     <img src="assets/icon/Star 6.svg" alt="" class="star" />
                     <span class="value">4.5</span>
@@ -194,7 +194,7 @@
              <a href=""><img src="assets/img/Image (1).svg" alt="" class="thumb" /></a>
               <div class="info">
                 <div class="head">
-               <a href=""><h3 class="title">UI/UX design</h3></a>
+               <h3 class="title"><a href="" class="line-clamp"></a>UI/UX design</a></h3>
                   <div class="rating">
                     <img src="assets/icon/Star 6.svg" alt="" class="star" />
                     <span class="value">4.5</span>
@@ -217,7 +217,7 @@
                 <div class="info">
               </a>
                 <div class="head">
-                  <a href=""><h3 class="title">Web App design</h3></a>
+                  <h3 class="title"><a href="" class="line-clamp"></a>Web App design</a></h3>
                   <div class="rating">
                     <img src="assets/icon/Star 6.svg" alt="" class="star" />
                     <span class="value">4.5</span>
