code phần feedback

--- a/index.html
+++ b/index.html
@@ -235,6 +235,32 @@
             </div>
           </div>
         </div>
+        <!-- feedback -->
+         <div class="feedback">
+          <div class="main-content">
+            <div class="feedback-list">
+              <div class="feedback-item">
+                <!-- khối bên trái -->
+                <div class="info">
+                  <img src="assets/img/Ellipse 2649.svg" alt="" class="avatar">
+                  <p class="member-name">Peter Moor</p>
+                  <p class="desc">Student of Web Design</p>
+                  <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                  </div>
+                  <!-- <img src="assets/icon/Group 17528.svg" alt="" class="foot"> -->
+                </div>
+                <!-- khối bên phải -->
+                 <div class="content">
+                  <img src="assets/icon/Vector.svg" alt="" class="open-quotes">
+                  <blockquote class="head">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                 </div>
+              </div>
+            </div>
+          </div>
+         </div>
       </div>
     </div>
   </body>
