--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-      </div>
+       </div>
       <!-- popular -->
       <div class="popular">
         <div class="main-content">
@@ -236,7 +236,7 @@
           </div>
         </div>
         <!-- feedback -->
-         <div class="feedback">
+      <div class="feedback">
           <div class="main-content">
             <div class="feedback-list">
               <!-- item 1 -->
@@ -302,6 +302,23 @@
                  </div>
           </div>
             </div>
+          </div>
+        </div>
+        <!-- features -->
+         <div class="features">
+          <div class="main-content">
+          <div class="body">
+            <div class="images">
+              <img src="assets/img/man-7628305.jpg" alt="" class="image image-left">
+              <img src="assets/img/sunset-7628294.jpg" alt="" class="image image-right">
+            </div>
+            <div class="content">
+              <h2 class="heading-h2">learner outcomes through our awesome platform</h2>
+              <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+             <a href="" class="btn btn-sign-up">Sign Up</a>
+            </div>
+          </div>
           </div>
          </div>
     </div>
