--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </div>
           </div>
         </div>
-        <!-- features -->
+        <!-- features 1 -->
          <div class="features">
           <div class="main-content">
           <div class="body">
@@ -319,6 +319,21 @@
              <a href="" class="btn btn-sign-up">Sign Up</a>
             </div>
           </div>
+          </div>
+         </div>
+         <!--features 2 -->
+         <div class="features features-2nd">
+          <div class="main-content">
+            <div class="body">
+              <div class="images">
+                <img src="assets/img/sunset-7628294.jpg" alt="" class="image">
+              </div>
+              <div class="content">
+                <h2 class="heading-h2">Take the next step toward your personal and professional goals with Lesson.</h2>
+                <p class="desc">Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>
+                <a href="" class="btn btn-join-now">Join Now</a>
+              </div>             
+            </div>           
           </div>
          </div>
     </div>
