--- a/index.html
+++ b/index.html
@@ -336,6 +336,44 @@
             </div>           
           </div>
          </div>
+
+         <div class="blogs">
+            <div class="main-content">
+              <div class="blog-top">
+                <h2 class="heading-h2">Our blog</h2>
+                <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+              </div>
+              <div class="blog-list">
+                <!-- item 1 -->
+                <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog1.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 2 -->
+                 <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog2.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 3 -->
+                 <div class="blog-item">
+                 <a href="#!"> <img src="assets/img/blog3.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+              </div>
+              <div class="dots">
+                <span class="dot"></span>
+                <span class="dot active"></span>
+                <span class="dot"></span>
+              </div>          
+            </div>
+         </div>
     </div>
   </body>
 </html>
