--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body style="height: 10000px">
+  <body>
     <!-- header -->
     <header class="header fixed">
       <div class="main-content">
@@ -336,7 +336,7 @@
             </div>           
           </div>
          </div>
-
+         <!-- blogs -->
          <div class="blogs">
             <div class="main-content">
               <div class="blog-top">
@@ -366,6 +366,50 @@
                     <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
                     <a href="" class="btn btn-read-more">Read More</a></div>
                 </div>
+                <!-- item 4 -->
+                <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog1.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 5 -->
+                 <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog2.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 6 -->
+                 <div class="blog-item">
+                 <a href="#!"> <img src="assets/img/blog3.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                <!-- item 7 -->
+                <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog1.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 8 -->
+                 <div class="blog-item">
+                  <a href="#!"><img src="assets/img/blog2.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>
+                 <!-- item 9 -->
+                 <div class="blog-item">
+                 <a href="#!"> <img src="assets/img/blog3.jpg" alt="" class="image"></a>
+                  <div class="info">
+                    <p class="desc">21 November 2021</p>
+                    <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn btn-read-more">Read More</a></div>
+                </div>                                
               </div>
               <div class="dots">
                 <span class="dot"></span>
@@ -375,5 +419,85 @@
             </div>
          </div>
     </div>
+    <!-- footer -->
+     <footer class="footer">
+      <div class="main-content">
+        <div class="row">
+          <!-- column 1 -->
+          <div class="column">
+           <img src="assets/img/Logo.svg" alt="" class="logo">
+           <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+           <div class="socials">
+            <a href="">
+              <img src="./assets/icon/Twitter.svg" alt="" class="icon">
+            </a>
+            <a href="">
+              <img src="./assets/icon/Facebook.svg" alt="" class="icon">
+            </a>
+            <a href="">
+              <img src="./assets/icon/Linkedin.svg" alt="" class="icon">
+            </a>
+            <a href="">
+              <img src="./assets/icon/Instagram.svg" alt="" class="icon">
+            </a>
+           </div>
+          </div>
+          <!-- column 2 -->
+          <div class="column">
+            <h3 class="title">Company</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">About Us</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Our Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Latest News</a>
+              </li>
+            </ul>
+          </div>
+          <!-- column 3 -->
+          <div class="column">
+            <h3 class="title">Support</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">FAQ’s</a>
+              </li>
+              <li>
+                <a href="#!">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="#!">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#!">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- column 4 -->
+          <div class="column">
+            <h3 class="title">Address</h3>
+            <ul class="list">
+              <li>
+                <a href="#!"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</a>
+              </li>
+              <li>
+                <a href="#!"><strong>Email:</strong> email@gmail.com</a>
+              </li>
+              <li>
+                <a href="#!"><strong>Phone:</strong> + 000 1234 567 890</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          Copyright ©2022 webdesign.gdn All rights reserved
+        </div>
+      </div>
+     </footer>
   </body>
 </html>
